--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/index.css">
     <title>Spoder Web</title>
-    <script type="module" src="src/hello.js"></script>
+    <script type="module" src="src/main.js"></script>
 </head>
 <body class="v-container">
 </body>
