Adding logic for deck dealing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Spoder Web</title>
     <script type="module" src="src/main.js"></script>
 </head>
-<body class="v-container">
+<body class="container">
+    <button id="deck" class="container"></button>
 </body>
 </html>
