--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style/index.css" />
     <script type="module" defer src="src/main.js"></script>
     <script defer src="src/OAuth.js"></script>
-    <script defer src="src/board.js"></script>
+    <script defer src="src/timer.js"></script>
 
     <title>Spoder Web</title>
   </head>
