Reimplementing OAuth into component style

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/index.css" />
     <script type="module" defer src="src/main.js"></script>
-    <script defer src="src/OAuth.js"></script>
-    <script type="module" defer src="src/timer.js"></script>
-
-    <title>Spoder Web</title>
+    <title>Spider Solitaire</title>
   </head>
-  <body class="v-container" onload="getJWT()">
+  <body class="v-container">
   </body>
 </html>
