Integration, Favicon, Vibes,

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="public/spoderman.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/index.css" />
     <script type="module" defer src="src/main.js"></script>
     <title>Spider Solitaire</title>
   </head>
-  <body class="v-container">
-  </body>
+  <body class="v-container"></body>
 </html>
